History
=======

0.3 - Unreleased
----------------

- Replace " with &quot; to keep valid HTML if description contains quotes.
  [saily]

- Made id-generation more resistend against duplicated id's. We now use
  normalized urls to generate the item id.  [saily]

0.2 - 2009-06-12
----------------

- Moved from full to safe compression for javascript files.
  [saily]

- Removed unused class attributes for SuperFishViewlet.
  [saily]

- Added caching to improve rendering performance.
  [saily]

0.1 - 2009-06-09
----------------

- Initial import and idea  [saily]
