@@ -7,19 +7,14 @@
         name="collective.superfish.static"
         directory="static"
         />
-        
+
     <include package="plone.app.layout" />
-    
+
     <browser:viewlet
         name="collective.superfish"
         manager="plone.app.layout.viewlets.interfaces.IPortalHeader"
         class=".sections.SuperFishViewlet"
-        permission="zope2.View" 
+        permission="zope2.View"
         />
 
-    <adapter for=".sections.SuperFishViewlet"
-             factory="plone.app.layout.navigation.navtree.NavtreeStrategyBase"
-             provides="plone.app.layout.navigation.interfaces.INavtreeStrategy" 
-             />
-    
 </configure>
