@@ -1,2 +1,3 @@
+<h5 class="hiddenStructure" i18n:domain="plone" i18n:translate="heading_sections">Sections</h5>
 <ul tal:replace="structure view/portal_tabs" />
 <div class="visualClear"><!-- --></div>
